harbor/harbor.yml
#@ load("@ytt:data", "data")

apiVersion: v1
kind: Namespace
metadata:
  name: harbor
