harbor/virtualservice-notary.yml
#@ load("@ytt:data", "data")

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: notary-virtual-service
  namespace: harbor
spec:
  hosts:
    - #@ "notary." + data.values.apps_domain
  gateways:
    - app-gateway.istio-system.svc.cluster.local
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: harbor
        port:
          number: 4443
